fix bar graph y-axis to be whole numbers, spelling fix, removed confirmed password input in register page, added password input visibility for inputs of type password, css styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,6 +98,11 @@ input {
   color: var(--default-red);
 }
 
+.link {
+  display: inline-block;
+  margin: 5px 0px 10px 0px;
+}
+
 .submit-button {
   width: 100%;
   height: 50px;
@@ -109,7 +114,7 @@ input {
   font-weight: bold;
   font-size: 18px;
   cursor: pointer;
-  margin: 15px 0px 30px 0px;
+  margin: 15px 0px 15px 0px;
   border:2px solid var(--default-green);
 }
 
